fix overflow horizontal mobile screens

--- a/src/css/base/reset.css
+++ b/src/css/base/reset.css
@@ -8,6 +8,11 @@
   padding: 0;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
@@ -21,6 +26,7 @@ html:focus-within {
 body {
   position: relative;
   height: 100%;
+  width: 100%;
   font-family: var(--ff-poppins);
   font-size: var(--fs-base);
   color: var(--clr-neutral-white);
